--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "oauth2-server": "^3.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "pm2": "^3.2.4",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {},
   "scripts": {
