--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "acl": "^0.4.11",
+    "app-root-path": "^2.1.0",
     "body-parser": "^1.18.3",
     "config": "^3.0.0",
     "cors": "^2.8.5",
-    "debug": "^4.1.0",
+    "debug": "^4.1.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "moment-timezone": "^0.5.23",
