--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.1",
     "oauth2-server": "^3.0.1",
     "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^3.2.4",
     "pug": "^2.0.3",
