--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "acl": "^0.4.11",
     "app-root-path": "^2.1.0",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "config": "^3.0.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "csurf": "^1.9.0",
     "debug": "^4.1.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "helmet": "^3.15.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
@@ -20,9 +24,11 @@
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
     "oauth2-server": "^3.0.1",
+    "oauth2orize": "^1.11.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
+    "passport-oauth2-client-password": "^0.1.2",
     "pm2": "^3.2.4",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
